[package]
name = "gas"
version = "0.1.0"
authors = ["Mario Geiger <geiger.mario@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gas"
crate-type = ["cdylib"]

[dependencies]
glium = "*"

[dependencies.pyo3]
version = "0.10.1"
features = ["extension-module"]
